# GoogleProject

./: .gitignore  README.md  pyproject.toml  streamlit_app.py
.streamlit/: config.toml
data/sample/: ga4_sessions_sample.csv
docs/: dashboard_spec.md  resume_bullets.md
r/: channel_experiment_analysis.R
sql/: ga4_daily_channel_metrics.sql  ga4_events_export.sql  ua_sessions_export.sql
src/google_merch_funnel_analysis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/google_merch_store_analysis/: __init__.py  __main__.py  cli.py  dashboard_data.py  storage.py  transform.py
tests/: test_dashboard_data.py  test_transform.py
